--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,13 +6,13 @@ android {
         applicationId "shohei.yamamoto.quizcollege"
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 4 //更新するとき1増やす
-        versionName "1.3" //更新するとき増やす
+        versionCode 6 //更新するとき1増やす
+        versionName "1.5" //更新するとき増やす
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -21,7 +21,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //compile 'com.google.android.gms:play-services:6.+'
-    compile 'com.google.android.gms:play-services:11.0.4'
+    //noinspection GradleDependency,UseOfBundledGooglePlayServices
+    implementation 'com.google.firebase:firebase-ads:16.0.1'
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -29,4 +30,4 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
-
+apply plugin: 'com.google.gms.google-services'
